Minor fix for gracefully handling scenario where user acts on an entity that has been deleted, improved error message

--- a/sample/src/main/resources/uiMessages/messages_de.properties
+++ b/sample/src/main/resources/uiMessages/messages_de.properties
@@ -1,7 +1,7 @@
 # See documentation in message.properties.
 
 mainApplication.dataConstraintViolation=Unzulässige Eingabe
-mainApplication.entityNotFound=Datensatz nicht mehr vorhanden ({0}). Aktualisieren und erneut versuchen.
+mainApplication.entityNotFound=Datensatz nicht mehr vorhanden. Aktualisieren und erneut versuchen.
 mainApplication.logout=Abmelden
 mainApplication.timeoutWarning=Ihre Verbindung wird in {0} Minuten beendet. Klicken Sie hier, um die Verbindung erneut zu aktivieren.
 mainApplication.errorWindowCaption=Fehler
