--- a/sample/src/main/resources/uiMessages/messages.properties
+++ b/sample/src/main/resources/uiMessages/messages.properties
@@ -1,7 +1,7 @@
 # This file is for externalizing/internationalizing UI-level messages/labels
 
 mainApplication.dataConstraintViolation=Data constraint violation
-mainApplication.entityNotFound=You are acting on an entity ({0}) that no longer exists. Refresh and try again.
+mainApplication.entityNotFound=You are acting on an entity that no longer exists. Refresh and try again.
 mainApplication.logout=Logout
 mainApplication.timeoutWarning=Your session will expire in {0} minutes. Click here to keep your session active.
 mainApplication.errorWindowCaption=Error
