Refactored NameableEntity to NamedEntity Updated german language files

--- a/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/uiMessages/messages.properties
+++ b/expressui-archetype/src/main/resources/archetype-resources/src/main/resources/uiMessages/messages.properties
@@ -90,7 +90,7 @@ entityForm.clear=Clear
 entityForm.clear.toolTip=Clear form
 entityForm.saved=saved!
 entityForm.saveConflictError=Changes conflict with another user's changes. Refresh and try again.
-entityForm.saveValidationError=has validation errors!
+entityForm.saveValidationError="{0}" has validation errors!
 entityForm.previous.toolTip=Discard changes and go to previous record
 entityForm.next.toolTip=Discard changes and go to next record
 entityForm.typeCaption={0} Form
