--- a/sample/src/main/resources/ValidationMessages_de.properties
+++ b/sample/src/main/resources/ValidationMessages_de.properties
@@ -4,20 +4,20 @@ javax.validation.constraints.NotNull.message=Feld muss ausgef\u00FCllt werden
 
 com.expressui.core.validation.NumberConversionValidator.message=Ungültige Nummer
 com.expressui.core.view.field.FormField.required.message=Erforderlicher Wert fehlt
-com.expressui.core.view.field.FormField.dateParseError.message=Datumsformat ist ungültige
+com.expressui.core.view.field.FormField.dateParseError.message=Datumsformat ist ungültig
 com.expressui.core.entity.security.ValidPermission.message=Zugangsberechtigung für Auswahl des Datensatzes bereits vorhanden
 com.expressui.core.entity.security.User.passwordsDoNotMatch=Eingegebene Passw\u00F6rter stimmen nicht \u00FCberein
 
-com.expressui.sample.validator.ValidPhone.message=Ungültige Telefonnummer für Region: {0}. Verwenden Sie Format: {1}.
+com.expressui.sample.validator.ValidPhone.message=Ungültige Telefonnummer für Region {0}. Verwenden Sie das Format {1}.
 com.expressui.sample.validator.PhoneConversionValidator.message=Ungültige Telefonnummer
 com.expressui.sample.validator.UniqueLoginNameValidator.message=Login-Name ist bereits vergeben
 com.expressui.sample.util.ValidUrl.message=Ung\u00FCltige URL
 
 com.expressui.sample.entity.Phone.phoneNumberWithLetters=Telefonnummer darf keine Buchstaben enthalten
 
-com.expressui.sample.entity.Address.zipCodeInvalidForCountry=PLZ ung\u00FCltig f\u00FCr ausgew\u00E4hlten Land
-com.expressui.sample.entity.Address.zipCodeInvalidForUS=US-Postleitzahl muss 5 oder 9-stellig sein
-com.expressui.sample.entity.Address.zipCodeInvalidForCA=CA Postleitzahl muss das Format haben: A0A 0A0
+com.expressui.sample.entity.Address.zipCodeInvalidForCountry=PLZ ung\u00FCltig f\u00FCr ausgew\u00E4hltes Land
+com.expressui.sample.entity.Address.zipCodeInvalidForUS=US-Postleitzahl muss 5- oder 9-stellig sein
+com.expressui.sample.entity.Address.zipCodeInvalidForCA=CA-Postleitzahl muss das Format A0A 0A0 haben
 com.expressui.sample.entity.Address.stateRequiredForCountry=Angabe des Bundeslandes ist f\u00FCr das ausgew\u00E4hlte Land erforderlich
 com.expressui.sample.entity.Opportunity.actualCloseDateRequiredIfSalesStageClosed=Erforderlich, wenn Verkaufsphase abgeschlossen wurde
 com.expressui.sample.entity.Opportunity.actualCloseDateEmptyIfSalesStageOpen=Muss leer sein, wenn Verkaufsphase noch läuft
