--- a/sample/src/main/resources/domainMessages/messages.properties
+++ b/sample/src/main/resources/domainMessages/messages.properties
@@ -31,7 +31,7 @@ com.expressui.core.entity.AuditableEntity.modifiedBy=Modified by
 com.expressui.core.entity.AuditableEntity.created=Created
 com.expressui.core.entity.AuditableEntity.createdBy=Created by
 
-com.expressui.core.entity.NameableEntity.name=Name
+com.expressui.core.entity.Named.name=Name
 
 com.expressui.sample.view.HomePage=Home
 com.expressui.sample.view.dashboard.SampleDashboardPage=Dashboard
