--- a/sample/src/main/resources/domainMessages/messages_de.properties
+++ b/sample/src/main/resources/domainMessages/messages_de.properties
@@ -1,13 +1,13 @@
 ﻿# This file is for externalizing/internationalizing domain- or entity-level messages
 
-com.expressui.sample.SampleApplication=Beispielapplikation
+com.expressui.sample.SampleApplication=Beispiel-Applikation
 
 com.expressui.core.entity.AuditableEntity.lastModified=Zuletzt geändert
 com.expressui.core.entity.AuditableEntity.modifiedBy=Geändert von
 com.expressui.core.entity.AuditableEntity.created=Erstellt
 com.expressui.core.entity.AuditableEntity.createdBy=Erstellt von
 
-com.expressui.core.entity.NameableEntity.name=Name
+com.expressui.core.entity.NamedEntity.name=Name
 
 com.expressui.sample.view.HomePage=Startseite
 com.expressui.sample.view.dashboard.SampleDashboardPage=Übersicht
@@ -29,8 +29,8 @@ com.expressui.sample.view.registration.RegistrationPage=Registrieren
 
 com.expressui.core.entity.security.User=Benutzer
 com.expressui.core.entity.security.User.loginName=Benutzername
-com.expressui.core.entity.security.User.loginPassword=Login Passwort
-com.expressui.core.entity.security.User.repeatLoginPassword=Login Passwort wiederholen
+com.expressui.core.entity.security.User.loginPassword=Login-Passwort
+com.expressui.core.entity.security.User.repeatLoginPassword=Login-Passwort wiederholen
 com.expressui.core.entity.security.User.accountExpired=Konto abgelaufen
 com.expressui.core.entity.security.User.accountLocked=Konto gesperrt
 com.expressui.core.entity.security.User.credentialsExpired=Anmeldeinformationen abgelaufen
@@ -58,7 +58,7 @@ com.expressui.core.entity.security.Permission.deleteAllowed=Löschen erlaubt
 com.expressui.sample.entity.Address.street=Straße
 com.expressui.sample.entity.Address.city=Stadt
 com.expressui.sample.entity.Address.zipCode=PLZ
-com.expressui.sample.entity.Address.zipCode.toolTip=PLZ Bereich: <li> {0} - {1} </ li> </ ul>
+com.expressui.sample.entity.Address.zipCode.toolTip=PLZ-Bereich: <li> {0} - {1} </ li> </ ul>
 
 com.expressui.sample.entity.Country=Land
 com.expressui.sample.entity.State=Bundesland
@@ -67,15 +67,15 @@ com.expressui.sample.entity.State.code=Bundesland
 
 com.expressui.sample.dao.query.AccountQuery.name=Name
 com.expressui.sample.dao.query.AccountQuery.country=Land
-com.expressui.sample.dao.query.AccountQuery.country.toolTip=Wählen USA, Kanada, Mexiko, Australien um Bundesland zu sehen
+com.expressui.sample.dao.query.AccountQuery.country.toolTip=USA, Kanada, Mexiko, Australien wählen, um Bundesländer zu sehen
 com.expressui.sample.dao.query.AccountQuery.states=Bundesländer
 
 com.expressui.sample.view.account.AccountForm.overview=Überblick
 com.expressui.sample.entity.Account=Firma
 com.expressui.sample.entity.Account.assignedTo.loginName=Zugewiesen an
 com.expressui.sample.entity.Account.website=Webseite
-com.expressui.sample.entity.Account.accountTypes=Kategorie
-com.expressui.sample.entity.Account.email=E-mail
+com.expressui.sample.entity.Account.accountTypes=Kategorien
+com.expressui.sample.entity.Account.email=E-Mail
 com.expressui.sample.entity.Account.contacts=Firmenkontakte
 com.expressui.sample.entity.Account.opportunities=Verkaufschancen
 
@@ -103,9 +103,9 @@ com.expressui.sample.entity.Contact.lastName=Nachname
 com.expressui.sample.entity.Contact.title=Funktion
 com.expressui.sample.entity.Contact.birthDate=Geburtsdatum
 com.expressui.sample.entity.Contact.account.name=Firmenname
-com.expressui.sample.entity.Contact.leadSource=Interessent
-com.expressui.sample.entity.Contact.email=E-mail
-com.expressui.sample.entity.Contact.doNotEmail=Kein E-mail
+com.expressui.sample.entity.Contact.leadSource=Empfehlung
+com.expressui.sample.entity.Contact.email=E-Mail
+com.expressui.sample.entity.Contact.doNotEmail=Keine E-Mail
 com.expressui.sample.entity.Contact.mainPhone=Telefon
 com.expressui.sample.entity.Contact.mainPhone.toolTip=Beispielformat: {0}
 com.expressui.sample.entity.Contact.mainPhoneType=
@@ -118,14 +118,14 @@ com.expressui.sample.view.contact.ContactForm.otherAddress=Andere Adresse
 com.expressui.sample.view.contact.ContactForm.description=Beschreibung
 com.expressui.sample.entity.Contact.description=
 
-com.expressui.sample.dao.query.OpportunityQuery.accountName=Firmename
+com.expressui.sample.dao.query.OpportunityQuery.accountName=Firmenname
 com.expressui.sample.dao.query.OpportunityQuery.salesStages=Verkaufsphase
 
 com.expressui.sample.view.opportunity.OpportunityForm.overview=Überblick
 com.expressui.sample.entity.Opportunity=Verkaufschancen
 com.expressui.sample.entity.Opportunity.opportunityType=Typ
 com.expressui.sample.entity.Opportunity.account.name=Firmenname
-com.expressui.sample.entity.Opportunity.leadSource=Interessent
+com.expressui.sample.entity.Opportunity.leadSource=Empfehlung
 com.expressui.sample.entity.Opportunity.salesStage=Verkaufsphase
 com.expressui.sample.entity.Opportunity.salesStage.toolTip=Änderung der Verkaufsphase ändert die Wahrscheinlichkeit
 com.expressui.sample.entity.Opportunity.assignedTo.loginName=Zugewiesen an
@@ -135,7 +135,7 @@ com.expressui.sample.entity.Opportunity.currency=Währung
 com.expressui.sample.entity.Opportunity.currency.toolTip=Änderung der Währung ändert den Wert in USD
 com.expressui.sample.entity.Opportunity.amount=Betrag
 com.expressui.sample.entity.Opportunity.amount.toolTip=Änderung der Menge ändert den Wert in USD
-com.expressui.sample.entity.Opportunity.valueWeightedInUSD=Gewichteter Betrag in USD
+com.expressui.sample.entity.Opportunity.valueWeightedInUSD=Veranlagter Betrag in USD
 com.expressui.sample.entity.Opportunity.expectedCloseDate=Geschätztes Abschlussdatum
 com.expressui.sample.entity.Opportunity.actualCloseDate=Tatsächliches Abschlussdatum
 
@@ -147,21 +147,21 @@ com.expressui.sample.entity.Profile.firstName=Vorname
 com.expressui.sample.entity.Profile.lastName=Nachname
 com.expressui.sample.entity.Profile.title=Funktion
 com.expressui.sample.entity.Profile.companyWebsite=Firmenwebseite
-com.expressui.sample.entity.Profile.email=E-mail
+com.expressui.sample.entity.Profile.email=E-Mail
 com.expressui.sample.entity.Profile.phone=Telefon
 com.expressui.sample.entity.Profile.phone.toolTip=Beispielformat: {0}
 com.expressui.sample.entity.Profile.phoneType=
-com.expressui.sample.entity.Profile.user.loginName=Login Name
-com.expressui.sample.entity.Profile.user.loginPassword=Login Passwort
-com.expressui.sample.entity.Profile.user.repeatLoginPassword=Wiederholen Login Passwort
+com.expressui.sample.entity.Profile.user.loginName=Login-Name
+com.expressui.sample.entity.Profile.user.loginPassword=Login-Passwort
+com.expressui.sample.entity.Profile.user.repeatLoginPassword=Login-Passwort wiederholen
 
 com.expressui.sample.view.select.ContactSelect$ContactSelectQuery.lastName=Nachname
 com.expressui.sample.view.select.ContactSelect$ContactSelectQuery.country=Land
-com.expressui.sample.view.select.ContactSelect$ContactSelectQuery.country.toolTip=Wählen USA, Kanada, Mexiko, Australien um Bundesland zu sehen
+com.expressui.sample.view.select.ContactSelect$ContactSelectQuery.country.toolTip=USA, Kanada, Mexiko, Australien wählen, um Bundesländer zu sehen
 com.expressui.sample.view.select.ContactSelect$ContactSelectQuery.states=Bundesländer
 
 com.expressui.core.dao.security.query.RoleQuery.name=Name
 
-com.expressui.core.dao.security.query.UserQuery.loginName=Login Name
+com.expressui.core.dao.security.query.UserQuery.loginName=Login-Name
 
 com.expressui.sample.view.registration.RegistrationForm=Registrieren
