--- a/sample/src/main/resources/uiMessages/messages_de.properties
+++ b/sample/src/main/resources/uiMessages/messages_de.properties
@@ -2,7 +2,7 @@
 
 mainApplication.dataConstraintViolation=Unzulässige Eingabe
 mainApplication.entityNotFound=Datensatz nicht mehr vorhanden. Aktualisieren und erneut versuchen.
-mainApplication.logout=Abmelden
+mainApplication.logout=Logout
 mainApplication.timeoutWarning=Ihre Verbindung wird in {0} Minuten beendet. Klicken Sie hier, um die Verbindung erneut zu aktivieren.
 mainApplication.errorWindowCaption=Fehler
 mainApplication.confirmationCaption=Bestätigen Sie bitte:
@@ -14,10 +14,10 @@ mainApplication.footerLink=http://www.expressui.com/?page=poweredBy
 mainApplication.notAllowed=Nicht erlaubter Zugriff: {0}
 
 searchForm.clear=Zurücksetzen
-searchForm.clear.toolTip=Zurücksetzen der Suchabfrage
+searchForm.clear.toolTip=Zurücksetzen der Suchanfrage
 searchForm.search=Suchen
-searchForm.search.toolTip=Suchabfrage durchführen
-searchForm.typeCaption={0} Suchabfrage-Formular
+searchForm.search.toolTip=Suchanfrage durchführen
+searchForm.typeCaption={0} Suchanfrage-Formular
 
 results.first.toolTip=Zur ersten Seite
 results.previous.toolTip=Zurück
@@ -26,11 +26,11 @@ results.last.toolTip=Zur letzten Seite
 
 results.excel.toolTip=Export nach Excel
 
-results.refresh.toolTip=Aktualisieren Suchergebnisse
+results.refresh.toolTip=Suchergebnisse aktualisieren
 results.firstResult.invalid=Eintrag ungültig oder außerhalb des zulässigen Bereichs
 results.pageSize=pro Seite
 results.select=Auswählen
-results.select.toolTip=Objekt auswählen und Fenster schließen
+results.select.toolTip=Datensatz auswählen und Fenster schließen
 results.caption=&nbsp; - {0} von {1} Ergebnissen.
 
 crudResults.new=Neu
@@ -44,20 +44,20 @@ crudResults.delete.toolTip=Ausgewählte Datensätze löschen
 crudResults.deleted=Ausgewählte Datensätze gelöscht!
 
 aggregationRelationship.add=Hinzufügen
-aggregationRelationship.add.toolTip=Datensätze hinzufügen
+aggregationRelationship.add.toolTip=Zugehörige Datensätze hinzufügen
 aggregationRelationship.remove=Entfernen
-aggregationRelationship.remove.toolTip=Datensätze entfernen
+aggregationRelationship.remove.toolTip=Zugehörige Datensätze entfernen
 aggregationRelationship.added=Ausgewählte Datensätze hinzugefügt!
 aggregationRelationship.removed=Ausgewählte Datensätze entfernt!
 
-exportForm.caption="Export Parameter"
-exportForm.typeCaption=Excel Export
+exportForm.caption="Parameter-Export"
+exportForm.typeCaption=Excel-Export
 exportForm.export=Excel Export
-exportForm.export.toolTip=Export nach Excel
+exportForm.export.toolTip=In Excel exportieren
 exportForm.close=Abbrechen
 exportForm.close.toolTip=Export abbrechen
-exportForm.exportFilename=Export Dateiname
-exportForm.workbookName=Arbeitsmappe Name
+exportForm.exportFilename=Dateiname-Export
+exportForm.workbookName=Arbeitsmappen-Name
 exportForm.sheetName=Blatt
 exportForm.dateFormat=Datumsformat
 exportForm.doubleFormat=Zahlenformat
@@ -71,7 +71,7 @@ exportForm.defaultDoubleFormat=###,###
 
 typedForm.add=Hinzufügen
 typedForm.remove=Entfernen
-typedForm.tab.toolTip=Rechter Mausklick zum Hinzufügen oder Entfernen des Eingabefeldes
+typedForm.tab.toolTip=Rechter Mausklick zum Hinzufügen oder Entfernen der Registerkarte
 typedForm.toggleSearchForm.toolTip=Suchformular öffnen und schließen
 
 entityForm.cancel=Abbrechen
@@ -83,20 +83,20 @@ entityForm.saveAndClose.toolTip=Änderungen speichern und Fenster schließen
 entityForm.refresh=Aktualisieren
 entityForm.refresh.toolTip=Änderungen verwerfen und Datensatz neu laden
 entityForm.clear=Zurücksetzen
-entityForm.clear.toolTip=Zurücksetzen Formular
+entityForm.clear.toolTip=Formular zurücksetzen
 entityForm.saved=Gespeichert!
 entityForm.saveConflictError=Änderungen kollidieren mit Änderungen eines anderen Nutzers. Aktualisieren und erneut versuchen.
-entityForm.saveValidationError=ist ungültig!
+entityForm.saveValidationError="{0}" ist ungültig!
 entityForm.previous.toolTip=Änderungen verwerfen und zurück zum vorherigen Datensatz
 entityForm.next.toolTip=Änderungen verwerfen und weiter zum nächsten Datensatz
-entityForm.typeCaption={0} Forumular
-entityForm.entityCaption.new={0} Forumular - Neu
-entityForm.entityCaption.existing={0} Forumular - {1}
-entityForm.tabWithInvalidValues=Eingabefeld enthält ungültige Werte
+entityForm.typeCaption={0}-Formular
+entityForm.entityCaption.new={0} Formular - Neu
+entityForm.entityCaption.existing={0} Formular - {1}
+entityForm.tabWithInvalidValues=Registerkarte enthält ungültige Werte
 entityForm.formWithInvalidValues=Formular enthält ungültige Werte
 
 selectField.clear.toolTip=Zurücksetzen
-selectField.search.toolTip=Fenster öffnen um Datensatz auszuwählen
+selectField.search.toolTip=Fenster öffnen, um Datensatz auszuwählen
 
 formField.defaultLabelSectionDisplayName=Formular
 resultsField.defaultLabelSectionDisplayName=Spalte
@@ -126,8 +126,8 @@ sampleDashBoard.opportunityChartByYear=Vertrieb - Erfolgreich & Nicht erfolgreic
 sampleDashBoard.opportunityChartByYear.axisLabel=Jahr
 sampleDashBoard.opportunityChartByYear.closedWon=Erfolgreich abgeschlossen
 sampleDashBoard.opportunityChartByYear.closedLost=Nicht erfolgreich abgeschlossen
-sampleDashBoard.opportunityChartBySalesStage=Verkaufsphase Übersicht
+sampleDashBoard.opportunityChartBySalesStage=Übersicht Verkaufsphase
 sampleDashBoard.opportunitySalesStages=Verkaufsphase
 
-sampleApplication.internetConnectivityError=Die Beispielapplikation erfordet eine Internetverbindung. </ Br> Wenn es hinter einem Proxy läuft, \
+sampleApplication.internetConnectivityError=Die Beispiel-Applikation erfordert eine Internetverbindung. </ Br> Wenn es hinter einem Proxy läuft, \
    konfigurieren Sie bitte http.proxyHost und http.proxyPort in application.properties.
