Fixes to select items read-only, label registry, messages

--- a/sample/src/main/resources/domainMessages/messages.properties
+++ b/sample/src/main/resources/domainMessages/messages.properties
@@ -82,7 +82,7 @@ com.expressui.core.entity.security.Permission.deleteAllowed=Delete Allowed
 com.expressui.sample.entity.Address.street=Street
 com.expressui.sample.entity.Address.city=City
 com.expressui.sample.entity.Address.zipCode=Zip Code
-com.expressui.sample.entity.Address.zipCode.toolTip=Postal code range:<ul><li>{0} - {1}</li></ul>
+com.expressui.sample.entity.Address.zipCode.toolTip=Postal code range: {0} - {1}
 
 com.expressui.sample.entity.Country=Country
 com.expressui.sample.entity.State=State
