--- a/sample/src/main/resources/domainMessages/messages_de.properties
+++ b/sample/src/main/resources/domainMessages/messages_de.properties
@@ -58,7 +58,7 @@ com.expressui.core.entity.security.Permission.deleteAllowed=Löschen erlaubt
 com.expressui.sample.entity.Address.street=Straße
 com.expressui.sample.entity.Address.city=Stadt
 com.expressui.sample.entity.Address.zipCode=PLZ
-com.expressui.sample.entity.Address.zipCode.toolTip=PLZ-Bereich: <li> {0} - {1} </ li> </ ul>
+com.expressui.sample.entity.Address.zipCode.toolTip=PLZ-Bereich: {0} - {1}
 
 com.expressui.sample.entity.Country=Land
 com.expressui.sample.entity.State=Bundesland
